--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-h1 {
-    color: green;
-  }
+* {
+  font-size: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ }
 
 img {
     border-radius: 50%;
