--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,50 @@
-* {
-  font-size: 100%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+/* Centers and sets margin for all div to 960 px*/
+div {
+  width: 960px;
+  margin: auto;
+  background: white;
+  padding: 10px;
+}
+
+/* Adds background image to site */
+body {
+  background-image: url("../../assets/images/greyfloral.png");
+  background-color: #cccccc;
  }
 
+/* navbar container */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Navbar links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Links - change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Removes bullet point from topnav*/
+ul {
+  list-style: none;
+ }
+
+/* Makes profile image round */
 img {
     border-radius: 50%;
+  }
+  
+body {
+    font-family: Arial;
+    padding: 10px;
   }
