--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ div {
 
 /* Adds background image to site */
 body {
-  background-image: url("../../assets/images/greyfloral.png");
+  background-image: url("../../assets/images/stripes-light.png");
   background-color: #cccccc;
  }
 
@@ -20,12 +20,13 @@ body {
 
 /* Navbar links */
 .topnav a {
-  float: left;
-  display: block;
+  float: right;
+  width: 100%;
+  display: inline-block;
   color: #f2f2f2;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  text-align: center;
 }
 
 /* Links - change color on hover */
@@ -41,16 +42,74 @@ ul {
 
 /* Makes h1 white */
 h1 {
+  display: inline-block;
   color: white;
   font-family: font-family: Georgia, 'Times New Roman', Times, serif; 
+  float:none;
   }
+
+/* Makes h2 teal */
+h2 {
+  color: 4aaaa5;
+}
 
 /* Makes profile image round */
 img {
     border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+    float: left;
   }
   
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
   }
+
+.contact {
+  width: 960px;
+  margin: auto;
+  border: 1px solid grey;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Contact form styling */
+
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */  
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #cccccc;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker grey color */
+input[type=submit]:hover {
+  background-color: #363636;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+
+.footer {
+  width: 960px
+}
