--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   background-image: url("../../assets/images/stripes-light.png");
   background-color: white;
  }
-
+ 
 /* Header style */ 
 header {
   background-color: #ffffff;
@@ -21,7 +21,7 @@ header {
 /* navbar container */
 .topnav {
   overflow: hidden;
-  background-color: #4aaaa5;
+  background-color: white;
   font-family: Georgia, 'Times New Roman', Times, serif;
   border: 1px solid #dddddd;
   height: 75px;
@@ -32,7 +32,7 @@ header {
   float: right;
   width: 100%;
   display: inline-block;
-  color: #f2f2f2;
+  color: #777777;
   padding: 14px 16px;
   text-decoration: none;
   text-align: center;
@@ -52,10 +52,10 @@ ul {
 
 /* Makes h1 white and sets font*/
 h1 {
-  display: inline-block;
   color: white;
   font-family: font-family: Georgia, 'Times New Roman', Times, serif; 
-  float:none;
+  padding: 10px;font-size:32px;background-color: #4aaaa5;color:#ffffff;
+  margin: 10px;
   }
 
 /* Makes h2 teal */
@@ -74,6 +74,7 @@ img {
     float: left;
   }
 
+/* Paragraph About Me*/  
 .bio {
   margin: 10px;
   padding: 50px;
@@ -139,6 +140,7 @@ footer {
   background-color: #666666;
   border-top: 8px solid #4aaaa5;
   width: 960px;
+  padding-bottom: 10px;
 }
 
 #copyright {
