--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,14 @@ div {
   width: 960px;
   margin: auto;
   background: white;
-  border: 1px solid #dddddd;
 }
 
 /* Adds background image to site */
 body {
   background-image: url("../../assets/images/stripes-light.png");
   background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #777777; 
  }
  
 /* Header style */ 
@@ -18,45 +19,17 @@ header {
   border: 1px solid #dddddd;
 }
 
-/* navbar container */
-.topnav {
-  overflow: hidden;
-  background-color: white;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  border: 1px solid #dddddd;
-  height: 75px;
-}
-
-/* Navbar links */
-.topnav a {
-  float: right;
-  width: 100%;
-  display: inline-block;
-  color: #777777;
-  padding: 14px 16px;
-  text-decoration: none;
-  text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-/* Links - change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Removes bullet point from topnav*/
-ul {
-  list-style: none;
- }
-
 /* Makes h1 white and sets font*/
 h1 {
   color: white;
-  font-family: font-family: Georgia, 'Times New Roman', Times, serif; 
-  padding: 10px;font-size:32px;background-color: #4aaaa5;color:#ffffff;
+  font-family: Georgia, 'Times New Roman', Times, serif; 
+  padding: 10px;
+  font-size:32px;
+  background-color: #4aaaa5;
+  color:#ffffff;
   margin: 10px;
   }
+
 
 /* Makes h2 teal */
 h2 {
@@ -68,7 +41,6 @@ h2 {
 
 /* Image styling */
 img {
-
     margin: 0 auto;
     padding: 20px; 
     float: left;
@@ -80,12 +52,6 @@ img {
   padding: 50px;
 }
   
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 10px;
-  color: #777777;
-  }
-
 
 .contact {
   width: 960px;
