--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,17 +11,19 @@ body {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   color: #777777;
-  margin: 0; 
+  margin: 0;
+  line-height: 1.7em; 
  }
  
-/* Header style */ 
+/* Header style - adds background color, padding, and bottom border */ 
 header {
   background-color: #ffffff;
-  border-bottom: 10 px solid #dddddd;
   padding: 20px; 
   overflow: auto;
+  border-bottom:1px solid #dddddd;(0,0,0);padding-bottom:10px;
 }
 
+/* Clears h1 and nav bar */
 .clearfix::after {
   content: "";
   clear: both;
@@ -100,7 +102,7 @@ img {
 /* Paragraph About Me*/  
 .bio {
   margin: 10px;
-  padding: 50px;
+  padding: 20px;
 }
   
 /* Paragraph about me */
